Converting Force Feedback control from Windows Forms to WPF.

--- a/x360ce.App.Beta/Controls/PadTabPages/DPadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadTabPages/DPadControl.xaml
@@ -14,11 +14,11 @@
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</UserControl.Resources>
-	<GroupBox Header="Axis to D-Pad">
+	<GroupBox HorizontalAlignment="Left" VerticalAlignment="Top" Header="Axis to D-Pad">
 		<StackPanel Orientation="Horizontal">
 			<CheckBox
 				x:Name="EnabledCheckBox"
-				Margin="6,6,6,6"
+				Margin="4,4,4,4"
 				VerticalAlignment="Top"
 				Content="Enabled" />
 
